@@ -1,0 +1,57 @@
+﻿<?xml version='1.0' encoding='UTF-8'?>
+<icondef>
+	<name>vKontakte</name>
+
+	<description>vKontakte Iconset</description>
+
+	<version>1.0</version>
+
+ 	<creation>2010-03-15</creation>
+
+ 	<author>Tosha</author>
+
+	<icon>
+		<key>online</key>
+		<object mime='image/png'>online.png</object>
+	</icon>
+
+	<icon>
+		<key>offline</key>
+		<object mime='image/png'>offline.png</object>
+	</icon>
+
+	<icon>
+		<key>away</key>
+		<object mime='image/png'>away.png</object>
+	</icon>
+
+	<icon>
+		<key>xa</key>
+		<object mime='image/png'>xa.png</object>
+	</icon>
+
+	<icon>
+		<key>dnd</key>
+		<object mime='image/png'>dnd.png</object>
+	</icon>
+
+	<icon>
+		<key>invisible</key>
+		<object mime='image/png'>invisible.png</object>
+	</icon>
+
+	<icon>
+		<key>chat</key>
+		<object mime='image/png'>chatty.png</object>
+	</icon>
+
+	<icon>
+		<key>ask</key>
+		<object mime='image/png'>ask.png</object>
+	</icon>
+
+	<icon>
+		<key>noauth</key>
+		<object mime='image/png'>noauth.png</object>
+	</icon>
+</icondef>
