@@ -7,6 +7,7 @@ LEGEND
 
 
 ------
+  [+] Added status iconset for "vKontakte" users
   [+] Send button is added to the messages standard input field
   [*] In the case when failed to identify a registered conference nick, by default invited to use the nickname from the vCard
   [-] Unable to login to some servers in some cases
